--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -36,4 +36,10 @@
 			border-radius: 10px;
 			float: right;'
 		}
-			//hover link active visited
+		.blogpost{
+			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+			border-radius:10px 10px 10px 10px;
+			background-color:#f0f5f5;
+			padding:10px 10px 10px 10px;
+
+		}
